refactor: address code review gaps and productionize the SDK
- Packaging & Distribution: Updated groupId to io.github.shivam61, added CHANGELOG.md, and configured a Release workflow for GitHub.
- Performance: Replaced SHA-256 with a high-performance 64-bit canonical hashing for deduplication.
- Concurrency: Refactored InferenceExecutor to use Java 21 StructuredTaskScope (JEP 453) for robust stage management.
- Observability: Added ml-routing-micrometer module with MicrometerMetricsRecorder for Prometheus/Grafana integration.
- Benchmarking: Implemented real JMH harness in ml-routing-benchmarks for reproducible performance validation.
- Spring Boot: Added ml-routing-spring-boot-starter with AutoConfiguration for seamless integration.
- Resiliency: Hardened executor error handling; failures and timeouts now accurately reflected in status and trace.
- Cleanliness: Fixed duplicated docs/ directory and standardized package naming.